openshift/base/jhipster-registry/jhipster-registry-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jhipster-registry
spec:
  serviceName: jhipster-registry
  replicas: 1
  selector:
    matchLabels:
      com.xebialabs.service: jhipster-registry
      version: "1.0"
  template:
    metadata:
      labels:
        com.xebialabs.service: jhipster-registry
        version: "1.0"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jhipster-registry
        image: jhipster/jhipster-registry:v4.0.2
        ports:
        - containerPort: 8761
        volumeMounts:
        - name: config-volume
          mountPath: /central-config
      volumes:
      - name: config-volume
        configMap:
          name: application-config
