openshift/base/jhipster-registry/jhipster-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    com.xebialabs.service: jhipster-registry
  name: jhipster-registry
spec:
  ports:
  - name: "http"
    port: 8761
    targetPort: 8761
  selector:
    com.xebialabs.service: jhipster-registry
