openshift/base/jhipster-registry/jhipster-registry-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    com.xebialabs.service: jhipster-registry
  name: jhipster-registry
spec:
  port:
    targetPort: 8761
  to:
    kind: Service
    name: jhipster-registry
    weight: 100
  wildcardPolicy: None
